# parallel-nbody

./: CMakeLists.txt  README.md
analyses/data/: Forces+Integration-Efficiency-VS-All-Techniques-AND-Memory-Access.xlsx  Forces+Integration-Speedup-VS-All-Techniques-AND-Memory-Access.xlsx  Forces+Integration-Time-VS-All-Techniques-AND-Memory-Access.xlsx
analyses/data/omp/: ComputeForcesOmp.csv  IntegrateBodiesOmp.csv
analyses/data/sequential/: ComputeForces.csv  IntegrateBodies.csv  SequentialAll.csv
analyses/data/sycl/cpu/: ComputeForceKernelAll_LOG2.csv  ComputeForceKernelGlobal.csv  ComputeForceKernelLocal.csv  IntegrateBodyKernelAll_LOG2.csv  IntegrateBodyKernelCoalesced.csv  IntegrateBodyKernelGlobal.csv  IntegrateBodyKernelLocal.csv
analyses/data/sycl/gpu/: ComputeForceKernelAll_LOG2.csv  ComputeForceKernelGlobal.csv  ComputeForceKernelLocal.csv  IntegrateBodyKernelAll_LOG2.csv  IntegrateBodyKernelCoalesced.csv  IntegrateBodyKernelGlobal.csv  IntegrateBodyKernelLocal.csv
analyses/data/tpool/: ComputeForcesTPool.csv  IntegrateBodiesTPool.csv
cmake/Modules/: Common.cmake
include/: crand.hpp  file_io.hpp  timer.hpp
include/graphics/: README.md  graphics.hpp
include/graphics/app/: app.hpp
include/graphics/camera/: camera.hpp
include/graphics/renderer/: index_buffer.hpp  mesh.hpp  renderer.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_buffer_layout.hpp
include/graphics/shader/: shader.hpp
include/graphics/time/: time.hpp
include/graphics/util/: glutil.hpp
include/graphics/window/: window.hpp
include/sycl_utils/: sycl_utils.hpp
include/sycl_utils/device/: device_util.hpp
include/sycl_utils/memory/: memory_util.hpp
include/sycl_utils/profiling/: profiling_util.hpp
include/tpool/: README.md  tpool.hpp
nbody/: CMakeLists.txt
nbody-omp/: CMakeLists.txt
nbody-omp/src/: nbody-omp.cpp  nbody-omp.hpp
nbody-sycl/: CMakeLists.txt
nbody-sycl/src/: nbody-sycl.cpp  nbody-sycl.hpp  profiler.hpp
nbody-sycl/src/kernels/: common.hpp  compute_force_kernel.hpp  integrate_body_kernel.hpp
nbody-tpool/: CMakeLists.txt
nbody-tpool/src/: nbody-tpool.cpp  nbody-tpool.hpp
nbody/src/: nbody.cpp  nbody.hpp
